Fixed mobile research items oversize on mobile

--- a/_sass/mobile.scss
+++ b/_sass/mobile.scss
@@ -20,7 +20,7 @@
 		display: block;
 		position: $navPos;
 		transform: translate(0%, -100%);
-		transition: all 0.45s ease-in;
+		transition: transform 0.45s ease-in;
 
 		#navImg {
 			display: none;
@@ -133,10 +133,11 @@
 		}
 
 		li {
-			width: 140%;
+			width: 100%;
 
-			.boxLink {
-				margin-right: 40%;
+			p {
+				max-width: 100%;
+				margin-right: 0;
 			}
 		}
 	}
